--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
-== README
+== Jobs Bro
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is a jobs board web app built using ruby on rails. 
 
-Things you may want to cover:
+Home Page
+![alt tag](http://imgur.com/sC58RDN)
 
-* Ruby version
+Add a Job
+![alt tag](http://imgur.com/KXIfJtN)
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Edit a job
+![alt tag](http://imgur.com/Bu0o8Qc)
